--- a/DigitalCountry/Mine/Views/ProfileHeaderView.xib
+++ b/DigitalCountry/Mine/Views/ProfileHeaderView.xib
@@ -116,6 +116,13 @@
                     </subviews>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IFm-gz-5DN">
+                    <rect key="frame" x="352" y="20" width="50" height="31"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="arrowshape.zigzag.forward" catalog="system"/>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
             <connections>
@@ -126,6 +133,7 @@
         </collectionReusableView>
     </objects>
     <resources>
+        <image name="arrowshape.zigzag.forward" catalog="system" width="128" height="93"/>
         <image name="headerView" width="350" height="350"/>
         <image name="person.crop.square" catalog="system" width="128" height="114"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
